--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body, html {
 	height: 100%;
 	font-family: sans-serif;
 
-	background: url('C:/Users/paulo/Desktop/Web Develloper/Start up landing page 1/header.jpg') no-repeat center center fixed; 
+	background: url('C:\Users\paulo\Documents\GitHub\ptampos.github.io') no-repeat center center fixed; 
   	-webkit-background-size: cover;
  	 -moz-background-size: cover;
  	 -o-background-size: cover;
